teckpack: audio: optimize for size
currently, audio driver having too large size. export -Os for reducing the size

Signed-off-by: Reinazhard <reinazhard@gmail.com>
Signed-off-by: RyuujiX <saputradenny712@gmail.com>

--- a/techpack/audio/asoc/codecs/Kbuild
+++ b/techpack/audio/asoc/codecs/Kbuild
@@ -283,3 +283,6 @@ mbhc_dlkm-y := $(MBHC_OBJS)
 
 obj-$(CONFIG_SND_SOC_MSM_HDMI_CODEC_RX) += hdmi_dlkm.o
 hdmi_dlkm-y := $(HDMICODEC_OBJS)
+
+ccflags-y += $(call cc-option, -g0)
+ccflags-y += $(call cc-option, -Os)
