--- a/arch/arm64/configs/asus/X00TD_defconfig
+++ b/arch/arm64/configs/asus/X00TD_defconfig
@@ -6016,7 +6016,7 @@ CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 CONFIG_DEBUG_INFO=y
 # CONFIG_DEBUG_INFO_REDUCED is not set
 # CONFIG_DEBUG_INFO_SPLIT is not set
-# CONFIG_DEBUG_INFO_DWARF4 is not set
+CONFIG_DEBUG_INFO_DWARF4=y
 # CONFIG_GDB_SCRIPTS is not set
 CONFIG_ENABLE_MUST_CHECK=y
 CONFIG_FRAME_WARN=0
