--- a/arch/arm64/configs/asus/X00TD_defconfig
+++ b/arch/arm64/configs/asus/X00TD_defconfig
@@ -4930,7 +4930,7 @@ CONFIG_MSM_IDLE_STATS_BUCKET_SHIFT=2
 CONFIG_MSM_IDLE_STATS_BUCKET_COUNT=10
 CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
 CONFIG_QTI_L2_REUSE=y
-# CONFIG_QCOM_DCC is not set
+CONFIG_QCOM_DCC=y
 CONFIG_QTI_RPM_STATS_LOG=y
 # CONFIG_MSM_JTAGV8 is not set
 CONFIG_QTEE_SHM_BRIDGE=y
