{X00TD, X01BD}_defconfig: Switch to qcom-prng
Signed-off-by: Reinazhard <reinazhard@gmail.com>
Signed-off-by: RyuujiX <saputradenny712@gmail.com>

--- a/arch/arm64/configs/asus/X01BD_defconfig
+++ b/arch/arm64/configs/asus/X01BD_defconfig
@@ -2534,7 +2534,6 @@ CONFIG_SERIAL_MSM_HS=y
 # CONFIG_SERIAL_CONEXANT_DIGICOLOR is not set
 CONFIG_SERIAL_DEV_BUS=y
 CONFIG_SERIAL_DEV_CTRL_TTYPORT=y
-CONFIG_SRANDOM=y
 # CONFIG_TTY_PRINTK is not set
 # CONFIG_HVC_DCC is not set
 # CONFIG_IPMI_HANDLER is not set
@@ -5885,7 +5884,7 @@ CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 # CONFIG_CRYPTO_DEV_OTA_CRYPTO is not set
-# CONFIG_CRYPTO_DEV_QCOM_RNG is not set
+CONFIG_CRYPTO_DEV_QCOM_RNG=y
 # CONFIG_CRYPTO_DEV_CCREE is not set
 # CONFIG_CRYPTO_DEV_HISI_SEC is not set
 CONFIG_CRYPTO_DEV_QCOM_ICE=y
