{X00TD, X01BD}_defconfig: disable QCOM_EARLY_RANDOM
It breaks booting when enabled with RNG backport.
RNG driver is now fast anyway, so this is unneeded anymore

Signed-off-by: Reinazhard <reinazhard@gmail.com>
Signed-off-by: RyuujiX <saputradenny712@gmail.com>

--- a/arch/arm64/configs/asus/X00TD_defconfig
+++ b/arch/arm64/configs/asus/X00TD_defconfig
@@ -4879,7 +4879,7 @@ CONFIG_QCOM_SMEM=y
 CONFIG_QCOM_SMD_RPM=y
 CONFIG_MSM_SPM=y
 # CONFIG_MSM_L2_SPM is not set
-CONFIG_QCOM_EARLY_RANDOM=y
+# CONFIG_QCOM_EARLY_RANDOM is not set
 # CONFIG_QCOM_MEMORY_DUMP_V2 is not set
 CONFIG_QCOM_SMEM_STATE=y
 CONFIG_QCOM_SMP2P=y
