{X00TD,X01BD}_defconfig: Enable Simple Thermal
Signed-off-by: RyuujiX <saputradenny712@gmail.com>

--- a/arch/arm64/configs/asus/X00TD_defconfig
+++ b/arch/arm64/configs/asus/X00TD_defconfig
@@ -3027,6 +3027,7 @@ CONFIG_CPU_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
 # CONFIG_THERMAL_EMULATION is not set
 # CONFIG_QORIQ_THERMAL is not set
+CONFIG_MSM_THERMAL_SIMPLE=y
 
 #
 # ACPI INT340X thermal drivers
