--- a/arch/arm64/configs/asus/X01BD_defconfig
+++ b/arch/arm64/configs/asus/X01BD_defconfig
@@ -934,6 +934,7 @@ CONFIG_PROCESS_RECLAIM=y
 CONFIG_MIGRATION=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_KSM=y
+CONFIG_UKSM_AUTO=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 # CONFIG_MEMORY_FAILURE is not set
