mm/uksm: Add support to Run UKSM when Screen ON only
Original Commit: https://github.com/ZyCromerZ/vayu-jun-22/commit/9da70b85887980d955ee689f5c009b0592020910
Reworked Commit: https://github.com/ZyCromerZ/vayu-jun-22/commit/4dc54c18a738810d1ac1492d79c2992e25b49900

RyuujiX: Nuked MSM DRM Notifier Support coz it's already removed on this commit 98ec704da565213af9a7a497f80c40eec67a2018

Co-authored-by: ZyCromerZ <neetroid97@gmail.com>
Signed-off-by: RyuujiX <saputradenny712@gmail.com>

--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -358,6 +358,12 @@ config UKSM
 	UKSM. Now UKSM has its first stable release and first real world enterprise user.
 	For more information, please goto its project page.
 	(github.com/dolohow/uksm)
+	
+config UKSM_AUTO
+	bool "AUTO UKSM using FB Notifier"
+	depends on UKSM
+	help
+		To Make UKSM Run when Screen On Only
 
 config KSM_LEGACY
 	bool "Legacy KSM implementation"
