--- a/drivers/block/zram/Kconfig
+++ b/drivers/block/zram/Kconfig
@@ -31,6 +31,10 @@ config ZRAM_DEF_COMP_LZO
 	bool "lzo"
 	depends on CRYPTO_LZO
 
+config ZRAM_DEF_COMP_LZORLE
+	bool "lzo-rle"
+	depends on CRYPTO_LZO
+
 config ZRAM_DEF_COMP_LZ4HC
 	bool "lz4hc"
 	depends on CRYPTO_LZ4HC
@@ -46,6 +50,7 @@ config ZRAM_DEF_COMP
 	default "zstd" if ZRAM_DEF_COMP_ZSTD
 	default "lz4" if ZRAM_DEF_COMP_LZ4
 	default "lzo" if ZRAM_DEF_COMP_LZO
+	default "lzo-rle" if ZRAM_DEF_COMP_LZORLE
 	default "lz4hc" if ZRAM_DEF_COMP_LZ4HC
 	default "842" if ZRAM_DEF_COMP_842
 
