zram: Use LZO-RLE as default compressor
Signed-off-by: RyuujiX <saputradenny712@gmail.com>

--- a/drivers/block/zram/Kconfig
+++ b/drivers/block/zram/Kconfig
@@ -16,7 +16,7 @@ config ZRAM
 
 choice
 	prompt "Default zram compressor"
-	default ZRAM_DEF_COMP_LZ4
+	default ZRAM_DEF_COMP_LZORLE
 	depends on ZRAM
 
 config ZRAM_DEF_COMP_ZSTD
