{X00TD, X01BD}_defconfig: Switch back to `HW_RANDOM_MSM_LEGACY`
* Legacy HW_RANDOM is better

Signed-off-by: RyuujiX <saputradenny712@gmail.com>

--- a/arch/arm64/configs/asus/X01BD_defconfig
+++ b/arch/arm64/configs/asus/X01BD_defconfig
@@ -2535,7 +2535,7 @@ CONFIG_SERIAL_DEV_CTRL_TTYPORT=y
 # CONFIG_TTY_PRINTK is not set
 # CONFIG_HVC_DCC is not set
 # CONFIG_IPMI_HANDLER is not set
-# CONFIG_HW_RANDOM is not set
+CONFIG_HW_RANDOM_MSM_LEGACY=y
 # CONFIG_APPLICOM is not set
 
 #
@@ -5890,7 +5890,7 @@ CONFIG_CRYPTO_DEV_QCOM_MSM_QCE=y
 CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 # CONFIG_CRYPTO_DEV_OTA_CRYPTO is not set
-CONFIG_CRYPTO_DEV_QCOM_RNG=y
+# CONFIG_CRYPTO_DEV_QCOM_RNG is not set
 # CONFIG_CRYPTO_DEV_CCREE is not set
 # CONFIG_CRYPTO_DEV_HISI_SEC is not set
 CONFIG_CRYPTO_DEV_QCOM_ICE=y
