--- a/arch/arm64/configs/asus/X01BD_defconfig
+++ b/arch/arm64/configs/asus/X01BD_defconfig
@@ -8,7 +8,7 @@
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-KnightWalker-ハヤト-Hayato-X"
+CONFIG_LOCALVERSION="-KnightWalker-アキオ-Akio"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
 CONFIG_HAVE_KERNEL_GZIP=y
